--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@
                         <div class="row">
                             <div class="col-lg-12 text-center">
                                 <div class="copyright-text">
-                                    <p>Copyright &copy; 2022 <span class="name">CodingPsych.</span>All Rights Reserved.
+                                    <p>Copyright &copy; 2025 <span class="name">Anees Razak</span>All Rights Reserved.
                                     </p>
                                 </div>
                             </div>
